--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -12,45 +12,49 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 <BaseLayout title="About">
   <BaseCard title="About">
-# About Frosti
+# About Me
 
 ---
 
 ## Brief introduction
 
-Frosti is a static blog template created by EveSunMaple using Astro, designed to replace bloated Hexo. The author is only a high school student, and there are many imperfections in this template that need to be modified. If you are interested, please visit the Github repository.
+Software engineer with 1+ years of experience in backend development using NestJS, TypeScript and Spring Framework. B.A.I. in Intelligent Systems. Built many systems and APIs. Technology agnostic, Result driven developer, with 1+ years of experience in mentorship and teaching in multinational companies in Germany and Egypt serving clients in North Africa and in the Middle East. Interested in leveraging emerging technologies to drive innovation, enhance experiences and operational efficiency.
 
-## TimeLine
+## Experience
+
+**Backend Software Engineer**, Menoufia University, _Menoufia University_.
+
+Sep 2023 - Sep 2024
+-  Reduced subscription costs of outsoursing portal system by $40,000+ annually via developing new portal backend system from scratch to replace legacy system using TypeScript, Nest.js, TypeORM and SQL Server.
+-  Increased system performance by 35% via migrating to new server host and tech stack using Docker and Node.js, with deployment to Jenkins and Coolify on server.
+-  Developed permission authorization system for 88,000+ students and employees, securing API endpoints against unauthorized access using Passport.js, Helmet and JWT authentication & authorization.
+
+**Site Supervisor**, Udacity, _Menoufia, Egypt_.
+
+Oct 2022 - Dec 2023
+- Led & coordinated efforts of DECI sessions, ensuring smooth execution & alignment with educational goals.
+- Audited sessions to maintain high standards, ensuring the delivery of accurate and effective technical content.
+- Delivered detailed feedback on sessions, contributing to a better learning environment.
+- Collaborated with instructors & supervisors to enhance learning and create environment for student success.
+
+**Backend Software Engineer Intern**, Banque Misr, _New Cairo, Egypt_. 
+
+Jul 2023 - Sep 2023
+- Developed real-time exchange rate system using Spring Boot, enabling currency conversions and copmarisons.
+- Doubled retrieval & conversion performance using Redis with cron job for caching.
+- Documented & tested code using Javadoc, Swagger, and JUnit. Deployed API with Docker on Render.
+
+## Certificates & Awards
 
     <TimeLine
 
 items={[
-{ year: "2024-5-29", event: "Fixed accessibility issues, improved speed" },
-{ year: "2024-5-30", event: "Improved content, updated README, score 395" },
-{ year: "2024-6-2", event: "Added ProjectCard, refined Project page, removed lazy loading" },
-{ year: "2024-6-2", event: "Optimized link styles, pagespeed score 400" },
-{ year: "2024-6-12", event: "Added busuanzi counter" },
-{ year: "2024-6-16", event: "Converted CSS to SCSS, customized waline, improved Footnotes" },
-{ year: "2024-6-28", event: "Revamped SCSS to Tailwind, updated footer" },
-{ year: "2024-7-8", event: "Lighthouse score 400, enabled text compression, reverted footer" },
-{ year: "2024-7-9", event: "Added search functionality, refined footer and navbar" },
-{ year: "2024-7-9", event: "Fixed navigation issue" },
-{ year: "2024-7-10", event: "Added twikoo comments, improved search night mode" },
-{ year: "2024-7-13", event: "Added TOC, new guide article, new components" },
-{ year: "2024-7-18", event: "Added line numbers to code blocks, tutorial for code block themes" },
-{ year: "2024-7-19", event: "Fixed astro.config.mjs issues, improved day mode code block styles" },
-{ year: "2024-7-21", event: "Restructured main element, rewrote social links, menus, navbar, comments" },
-{ year: "2024-7-22", event: "Added back-to-top button, tablet styles, new article and repo card styles" },
-{ year: "2024-7-22", event: "Cleaned global.scss, added uncategorized tag for articles without tags" },
-{ year: "2024-7-23", event: "Fixed navbar disappearance on mobile" },
-{ year: "2024-7-24", event: "Fixed project card information issues, TOC navigation on blog and project pages" },
-{ year: "2024-7-26", event: "Fixed project card style issues, type issues checked" },
-{ year: "2024-7-29", event: "Separated line numbers and top bar from code, added code language display" },
-{ year: "2024-7-29", event: "Adjusted code block top bar, padding on mobile" },
-{ year: "2024-7-30", event: "Added tab page configuration to consts.ts, updated BaseLayout.astro" },
-{ year: "2024-8-1", event: "Added pagination buttons, integrated with sidebar" },
-{ year: "2024-8-2", event: "Added category feature, pagination for category and tag lists" },
-{ year: "2024-8-4", event: "Updated README, added Vercel Web Analytics" },
+{ year: "Oct 2023", event: "FinYology FinTech Hackathon, 4th place finalist startup among 50+ teams @ Central Bank of Egypt." },
+{ year: "Sep 2023", event: "Rowad Backend Summer Internship, Summer Training in Backend Engineering @ Banque Misr." },
+{ year: "Aug 2023", event: "MINT Fintech Hackathon, 3rd Place Startup Idea Among 10 Teams @ EGBank & Startup Factory." },
+{ year: "Feb 2023", event: "Smart Governance Hackathon, 4th Place in Money Governance Idea @ AWS & Benha University." },
+{ year: "Oct 2022", event: "NTI AI Summer Training, Training in Python, Machine Learning, Deep Learning & AI Deployment." },
+{ year: "May 2022", event: "Full-Stack Web Development Nanodegree, EgFWD Scholarship @ Udacity & MCIT." },
 ]}
 />
 
