--- a/src/pages/friend.mdx
+++ b/src/pages/friend.mdx
@@ -1,4 +1,4 @@
-import BaseLayout from "../layouts/BaseLayout.astro";
+{/*import BaseLayout from "../layouts/BaseLayout.astro";
 import BaseCard from "../components/BaseCard.astro";
 import Collapse from "../components/blog/collapse.astro";
 import Diff from "../components/blog/diff.astro";
@@ -33,3 +33,4 @@ import LinkCard from "../components/page/LinkCard.astro";
 
   </BaseCard>
 </BaseLayout>
+*/}
