--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -18,8 +18,20 @@ import LinkCard from "../components/page/LinkCard.astro";
 
 ## Brief introduction
 
-Software engineer with 1+ years of experience in backend development using NestJS, TypeScript and Spring Framework. B.A.I. in Intelligent Systems. Built many systems and APIs. Technology agnostic, Result driven developer, with 1+ years of experience in mentorship and teaching in multinational companies in Germany and Egypt serving clients in North Africa and in the Middle East. Interested in leveraging emerging technologies to drive innovation, enhance experiences and operational efficiency.
+Software engineer with 1+ years of experience in backend development using NestJS, TypeScript and Spring Framework. B.A.I. in Intelligent Systems. Built many systems and APIs such as secure communication system & programming language interprete. Interested in tech and entrepreneurial topics.
 
+## Skills
+<div style="display: flex; justify-content: space-around; align-content: center;">
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/rust/rust-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" />
+  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" />
+</div>
 ## Experience
 
 **Backend Software Engineer**, Menoufia University, _Menoufia University_.
