--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -21,16 +21,16 @@ import LinkCard from "../components/page/LinkCard.astro";
 Software engineer with 1+ years of experience in backend development using NestJS, TypeScript and Spring Framework. B.A.I. in Intelligent Systems. Built many systems and APIs such as secure communication system & programming language interprete. Interested in tech and entrepreneurial topics.
 
 ## Skills
-<div style="display: flex; justify-content: space-around; align-content: center; flex-wrap: wrap;">
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/rust/rust-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" />
-  <img style="width: 3rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" />
+<div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center;">
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/rust/rust-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" />
 </div>
 ## Experience
 
