--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -22,15 +22,15 @@ Software engineer with 1+ years of experience in backend development using NestJ
 
 ## Skills
 <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center;">
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/rust/rust-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" />
-  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/rust/rust-original.svg" alt="Rust" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" alt="C++" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" alt="TypeScript" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg" alt="PostgreSQL" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" alt="Git" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" alt="Docker" />
+  <img style="width: 20%; max-width: 3rem; margin: 0.5rem;" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg" alt="Linux" />
 </div>
 ## Experience
 
